--- a/main.css
+++ b/main.css
@@ -1,14 +1,18 @@
 body {
-	text-align: center;
-	display: grid;
-	justify-content: center;
+	min-height: 100vh;
+	display: flex;
 	align-items: center;
+	justify-content: center;
+}
+
+.container {
+	text-align: center;
 }
 
 h1,
 .btnColor {
 	text-transform: capitalize;
-	color: white;
+	color: black;
 }
 
 .btnColor {
